// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <TopThreeThingsDetailForm /> should renders correctly when form is submitted 1`] = `
<div
  className="panel-body-inner"
>
  <form
    className="form"
    name="topThreeThingsPanelForm"
  >
    <div
      className="form-group-wrapper"
    >
      <FormSectionList
        title="Isssue #1"
      >
        <FormSection
          isAccordion={false}
          isBordered={true}
          isImportBtn={false}
          theme="primary"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <Field
                  component={[Function]}
                  id="name1"
                  label="Name"
                  name="name1"
                  placeholder=""
                  props={
                    Object {
                      "isSubmit": true,
                    }
                  }
                  type="text"
                />
              </div>
              <div
                className="col-expand-right"
              >
                <Field
                  component={[Function]}
                  id="description1"
                  label="Description"
                  name="description1"
                  props={
                    Object {
                      "isSubmit": true,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </FormSection>
      </FormSectionList>
      <FormSectionList
        title="Isssue #2"
      >
        <FormSection
          isAccordion={false}
          isBordered={true}
          isImportBtn={false}
          theme="primary"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <Field
                  component={[Function]}
                  id="name2"
                  label="Name"
                  name="name2"
                  placeholder=""
                  props={
                    Object {
                      "isSubmit": true,
                    }
                  }
                  type="text"
                />
              </div>
              <div
                className="col-expand-right"
              >
                <Field
                  component={[Function]}
                  id="description2"
                  label="Description"
                  name="description2"
                  props={
                    Object {
                      "isSubmit": true,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </FormSection>
      </FormSectionList>
      <FormSectionList
        title="Isssue #3"
      >
        <FormSection
          isAccordion={false}
          isBordered={true}
          isImportBtn={false}
          theme="primary"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <Field
                  component={[Function]}
                  id="name3"
                  label="Name"
                  name="name3"
                  placeholder=""
                  props={
                    Object {
                      "isSubmit": true,
                    }
                  }
                  type="text"
                />
              </div>
              <div
                className="col-expand-right"
              >
                <Field
                  component={[Function]}
                  id="description3"
                  label="Description"
                  name="description3"
                  props={
                    Object {
                      "isSubmit": true,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </FormSection>
      </FormSectionList>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="dateCreated"
            label="Date"
            name="dateCreated"
            props={
              Object {
                "disabled": true,
                "format": "DD-MMM-YYYY",
                "value": "01-Jan-2017",
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="source"
            label="Source"
            name="source"
            props={
              Object {
                "disabled": true,
              }
            }
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Component <TopThreeThingsDetailForm /> should renders with all props correctly 1`] = `
<div
  className="panel-body-inner"
>
  <form
    className="form"
    name="topThreeThingsPanelForm"
  >
    <div
      className="form-group-wrapper"
    >
      <FormSectionList
        title="Isssue #1"
      >
        <FormSection
          isAccordion={false}
          isBordered={true}
          isImportBtn={false}
          theme="primary"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <Field
                  component={[Function]}
                  id="name1"
                  label="Name"
                  name="name1"
                  placeholder=""
                  props={
                    Object {
                      "isSubmit": false,
                    }
                  }
                  type="text"
                />
              </div>
              <div
                className="col-expand-right"
              >
                <Field
                  component={[Function]}
                  id="description1"
                  label="Description"
                  name="description1"
                  props={
                    Object {
                      "isSubmit": false,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </FormSection>
      </FormSectionList>
      <FormSectionList
        title="Isssue #2"
      >
        <FormSection
          isAccordion={false}
          isBordered={true}
          isImportBtn={false}
          theme="primary"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <Field
                  component={[Function]}
                  id="name2"
                  label="Name"
                  name="name2"
                  placeholder=""
                  props={
                    Object {
                      "isSubmit": false,
                    }
                  }
                  type="text"
                />
              </div>
              <div
                className="col-expand-right"
              >
                <Field
                  component={[Function]}
                  id="description2"
                  label="Description"
                  name="description2"
                  props={
                    Object {
                      "isSubmit": false,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </FormSection>
      </FormSectionList>
      <FormSectionList
        title="Isssue #3"
      >
        <FormSection
          isAccordion={false}
          isBordered={true}
          isImportBtn={false}
          theme="primary"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <Field
                  component={[Function]}
                  id="name3"
                  label="Name"
                  name="name3"
                  placeholder=""
                  props={
                    Object {
                      "isSubmit": false,
                    }
                  }
                  type="text"
                />
              </div>
              <div
                className="col-expand-right"
              >
                <Field
                  component={[Function]}
                  id="description3"
                  label="Description"
                  name="description3"
                  props={
                    Object {
                      "isSubmit": false,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </FormSection>
      </FormSectionList>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="dateCreated"
            label="Date"
            name="dateCreated"
            props={
              Object {
                "disabled": true,
                "format": "DD-MMM-YYYY",
                "value": "01-Jan-2017",
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="source"
            label="Source"
            name="source"
            props={
              Object {
                "disabled": true,
              }
            }
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;
